# quitch

./: .gitignore  Cargo.toml  README.md  change.ts  change_test.ts  deno.json  main.ts  main_test.ts  package.json  plan.ts  plan_test.ts  registry.ts  result.ts  schema.ts
.github/workflows/: main.yml
src/: change.rs  main.rs  mysql_target.rs  plan.rs  registry.rs  registry_schema.sql
