[package]
name = "quitch"
version = "0.0.3"
edition = "2021"
description = "An attempt to reimplement parts of sqitch"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["unicode", "wrap_help", "derive"] }
futures = "0.3.30"
indexmap = "2.2.5"
itertools = "0.12.1"
sha1 = "0.10.6"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["macros", "mysql", "chrono", "runtime-tokio", "tls-rustls"]
